--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ permalink: pretty
 aux_links:
   Brielle K Thompson:
     - 'https://briellekthompson.github.io/personal_site/index.html'
-  Workshop on GitHub:
+  Analysis on GitHub:
     - 'https://github.com/briellekthompson/KenyaConflictRisks'
 footer_content:
 
