--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Analyzing conflict risks in Kenya
 tagline: Conflict Analysis
-description: Connflict Analysis
+description: Conflict Analysis
 author: Brielle K Thompson
 baseurl: '/KenyaConflictRisks' # the subpath of your site, e.g. /blog
 url: 'https://briellekthompson.github.io' # the base hostname & protocol for your site, e.g. http://example.com
@@ -33,6 +33,12 @@ aux_links:
   Analysis on GitHub:
     - 'https://github.com/briellekthompson/KenyaConflictRisks'
 footer_content:
+
+markdown: kramdown
+kramdown:
+  input: GFM            # GitHub-Flavored Markdown; safe for Just the Docs
+  toc_levels: 2..4      # optional: which heading levels appear in the TOC
+
 
 # Collections for website data
 collections:
