--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,6 @@ aux_links:
     - 'https://briellekthompson.github.io/personal_site/index.html'
   Analysis on GitHub:
     - 'https://github.com/briellekthompson/KenyaConflictRisks'
-footer_content:
-
 markdown: kramdown
 kramdown:
   input: GFM            # GitHub-Flavored Markdown; safe for Just the Docs
@@ -74,6 +72,6 @@ compress_html:
   blanklines: false
   profile: false
 
-liquid:
-  error_mode: strict
-  strict_filters: true
+# liquid:
+#   error_mode: strict
+#   strict_filters: true
